@@ -4,7 +4,10 @@ Changelog
 1.3.8 (unreleased)
 ------------------
 
-*
+* Remove deprecation warning on Zope 2.13: 
+  Products.ATReferenceBrowserWidget moved to archetypes.referencebrowserwidget
+  DTMLFile is deprecated. import from App.special_dtml instead
+  [toutpt]
 
 1.3.7 (2011-11-16)
 ------------------
